--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <div class="skill-card glass-effect"><h3>Problem Solving</h3></div>
               <div class="skill-card glass-effect"><h3>Consistency</h3></div>
               <div class="skill-card glass-effect"><h3>Content Creation</h3></div>
-              <div class="skill-card glass-effect"><h3>Public speeking</h3></div>
+              <div class="skill-card glass-effect"><h3>Public speaking</h3></div>
               <div class="skill-card glass-effect"><h3>Content creation</h3></div>
               <div class="skill-card glass-effect"><h3>Singing</h3></div>
               </div>
@@ -83,7 +83,7 @@
              <div class="timeline">
              <div class="timeline-item">
              <h3>2024</h3>
-             <p> I was in 11th class studying so seriously have a dream to become an iitan , As every one in INDIA has adream.</p>
+             <p> I was in 11th class studying so seriously have a dream to become an iitan , As every one in INDIA has a dream.</p>
              </div>
              <div class="timeline-item">
              <h3>2025</h3>
